Getting rid of Mockito